Menu z-index fix

--- a/src/components/Header/Menu.module.scss
+++ b/src/components/Header/Menu.module.scss
@@ -4,7 +4,7 @@
     align-items: center;
     gap: 30px;
     flex-direction: row;
-    z-index: 2;
+    z-index: -1;
     font-size: var(--font-size-s);
     border-radius: 30px;
     border: 1px solid rgba(255, 255, 255, 0.10);
